<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="5dp"
    android:backgroundTint="@color/abu"
    android:elevation="3dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_resto"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="150dp"/>
        <TextView
            android:id="@+id/tv_nama"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/nama_restoran"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_jarak_rating"
            android:textSize="12sp"
            android:text="@string/jarak_rating"
            android:layout_marginHorizontal="16sp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/alamat"
            android:textColor="@color/black"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/tv_buka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jam_buka"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>